Fixed images overlapping mobile screens

--- a/src/styles/component/logo-showcase.module.scss
+++ b/src/styles/component/logo-showcase.module.scss
@@ -1,21 +1,27 @@
 @import "../sass-variables.scss";
 
 .container {
-    width:100%;
-    margin-bottom:10px;
-    border-radius:$std-border-radius;
-    display:flex;
-    justify-content: center;
-    align-content: center;
-    padding:40px 15px;
+  width: 100%;
+  margin-bottom: 10px;
+  border-radius: $std-border-radius;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  padding: 40px 15px;
 }
 .container img {
-    max-width:400px;
-    max-height:340px;
+  max-width: 400px;
+  max-height: 340px;
 }
 
 @media (max-width: 800px) {
-    .container img {
-        max-height:200px;
-    }
+  .container img {
+    max-height: 200px;
+  }
+}
+
+@media (max-width: 500px) {
+  .container img {
+    max-width: 100%;
+  }
 }
